--- a/bin/tela/TelaCadastroDeFuncionario.form
+++ b/bin/tela/TelaCadastroDeFuncionario.form
@@ -132,7 +132,9 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jButtonAdicionar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="46" pref="357" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jButton1" min="-2" pref="111" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -212,7 +214,10 @@
                   <Component id="jFormattedTextFieldMatricula" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jButtonAdicionar" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jButtonAdicionar" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -389,6 +394,14 @@
     <Component class="javax.swing.JTextField" name="tField_CEP">
     </Component>
     <Component class="javax.swing.JTextField" name="tField_TipoLogradouro">
+    </Component>
+    <Component class="javax.swing.JButton" name="jButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Voltar"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
