Revert "Merge branch 'main' of https://github.com/Krefit/MecanicaNarnia"
This reverts commit 305c00fa531f011c79707fc97ff611c062b6539c, reversing
changes made to c406e0a230e527746d91e624eac20a9cca41e29e.

--- a/src/tela/TelaPrincipal.form
+++ b/src/tela/TelaPrincipal.form
@@ -39,20 +39,12 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ordens de Servi&#xe7;o"/>
+            <Property name="text" type="java.lang.String" value="Produtos"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemCadastroDeOS">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Cadastro de Ordens de Servi&#xe7;o"/>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemCadastroDeOSActionPerformed"/>
-              </Events>
-            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Ordens de Servi&#xe7;o"/>
+                <Property name="text" type="java.lang.String" value="jMenuItem2"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
