implementando fazer login com tecla enter

--- a/src/tela/TelaLogin.form
+++ b/src/tela/TelaLogin.form
@@ -77,8 +77,14 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldTxtUsuario">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextFieldTxtUsuarioKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="jPasswordFieldTxtSenha">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jPasswordFieldTxtSenhaKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonEntrar">
       <Properties>
