--- a/src/tela/TelaListaOS.form
+++ b/src/tela/TelaListaOS.form
@@ -57,8 +57,9 @@
         <Component class="javax.swing.JTable" name="jTableOSs">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="11" rowCount="0">
+              <Table columnCount="12" rowCount="0">
                 <Column editable="false" title="C&#xf3;digo" type="java.lang.String"/>
+                <Column editable="false" title="Placa do ve&#xed;culo" type="java.lang.String"/>
                 <Column editable="false" title="Status" type="java.lang.String"/>
                 <Column editable="false" title="Servi&#xe7;o feito" type="java.lang.String"/>
                 <Column editable="false" title="m&#xe3;o de obra" type="java.lang.String"/>
