--- a/src/tela/TelaBuscaOS.form
+++ b/src/tela/TelaBuscaOS.form
@@ -547,12 +547,9 @@
                                                   <Component id="tField_cpf_cnpj" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="3" attributes="0">
-                                                  <Component id="tField_DataNascimento_nomeFantasia" alignment="3" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="jLabel_DtNasc_RazSoc" alignment="3" min="-2" max="-2" attributes="0"/>
-                                              </Group>
+                                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                                              <Component id="tField_DataNascimento_nomeFantasia" alignment="3" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jLabel_DtNasc_RazSoc" alignment="3" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
